--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -1,61 +1,70 @@
 <footer class="relative">
-  <div class="flex flex-wrap w-full  z-50 bg-black text-white m-0">
+  <div class="flex flex-wrap w-full z-50 text-white m-0" style="background-color:rgba(0,0,0,0.9) ;">
     <div class="md:w-1/2 h-full my-auto">
       <h1 class="text-center pb-5 text-xl md:text-2xl">THÔNG TIN LIÊN HỆ</h1>
-      <ul style="width:70%;margin: 0px auto;" class="text-sm md:text-xl">
-        <li>Địa chỉ: 162 Ngô Tất Tố, phường 22, Bình Thạnh, Tp.HCM</li>
-        <li>Hotline: (028) 665.777.68 - 089.8857.089</li>
-        <li class="text">Email: newconstructionhcm@gmail.com</li>
-        <li>Nhà xưởng: 18A Đường 157, xã Bình Mỹ, Củ Chi, Tp.HCM</li>
+      <ul style="width: 70%; margin: 0px auto" class="text-sm md:text-lg overflow-hidden">
+        <li class="leading-8 overflow-hidden">
+          Địa chỉ: 162 Ngô Tất Tố, phường 22, Bình Thạnh, Tp.HCM
+        </li>
+        <li class="leading-8 overflow-hidden">Hotline: (028) 665.777.68 - 089.8857.089</li>
+        <li class="leading-8 overflow-hidden">Email: newconstructionhcm@gmail.com</li>
+        <li class="leading-8 overflow-hidden">
+          Nhà xưởng: 18A Đường 157, xã Bình Mỹ, Củ Chi, TP.HCM
+        </li>
       </ul>
     </div>
-    <div class="md:w-1/2 h-full my-auto text-center">
-      <h1 class="text-xl md:text-4xl">Contact─── Us</h1>
-      <h2 class="text-xl text-center py-6">New Construction luôn sẵn sàng và rất hân hạnh được hỗ trợ Quý Khách.</h2>
-      <h3>Facebook</h3>
-      <a href="https://www.facebook.com/noithatnewcons"
-        class="text-center pb-10">https://www.facebook.com/noithatnewcons</a> <br>
-      <a href="https://www.facebook.com/Newconstruction.vn"
-        class="text-center pb-6">https://www.facebook.com/Newconstruction.vn</a>
-      <h3>QR CODE</h3>
-      <div class="flex flex-wrap w-full mx-auto justify-between">
-        <img src="../../../assets/images/qrfb.PNG" class="object-contain w-1/3 mx-auto pb-7" alt="hinh">
-        <img src="../../../assets/images/qrweb.PNG" class="object-contain w-1/3 mx-auto pb-7" alt="hinh">
+    <div class="md:w-1/2 h-full my-3 text-center">
+      <h2 class="text-xl text-center py-3">
+        New Construction luôn sẵn sàng và rất hân hạnh được hỗ trợ Quý Khách.
+      </h2>
+      <div class="w-full">
+        <h3 class="text-center font-semibold text-white">FACEBOOK</h3>
+        <div class="w-full px-3 xl:px-8 mx-auto text-center">
+          <div class="w-full mx-auto text-center">
+            <a href="https://www.facebook.com/Cungcapkhonggianxanh"
+              class="text-blue-800 text-center text-sm xl:text-xl overflow-hidden">https://www.facebook.com/Cungcapkhonggianxanh</a>
+            <br />
+            <a href="https://www.facebook.com/Newconstruction.vn"
+              class="text-center text-blue-800 text-sm xl:text-xl overflow-hidden">https://www.facebook.com/Newconstruction.vn</a>
+          </div>
+          <br />
+          <h3 class="text-center text-xl mb-4">QR Code</h3>
+          <div class="w-[90%] md:w-4/5 xl:w-3/5 flex flex-nowrap justify-between mx-auto">
+            <img src="../../../assets/images/qr.png" class="object-contain w-2/5" alt="hinh" />
+            <img src="../../../assets/images/qr1.png" class="object-contain w-2/5" alt="hinh" />
+          </div>
+        </div>
       </div>
     </div>
     <div class="flex flex-wrap w-full mx-auto justify-between px-9 py-4">
-      <p ><svg  class="svg-inline--fa fa-copyright fa-w-16" aria-hidden="true"
-          focusable="false" data-prefix="far" data-icon="copyright" role="img" xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 512 512" data-fa-i2svg="">
+      <p>
+        <svg class="svg-inline--fa fa-copyright fa-w-16" aria-hidden="true" focusable="false" data-prefix="far"
+          data-icon="copyright" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg="">
           <path fill="currentColor"
             d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 448c-110.532 0-200-89.451-200-200 0-110.531 89.451-200 200-200 110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200zm107.351-101.064c-9.614 9.712-45.53 41.396-104.065 41.396-82.43 0-140.484-61.425-140.484-141.567 0-79.152 60.275-139.401 139.762-139.401 55.531 0 88.738 26.62 97.593 34.779a11.965 11.965 0 0 1 1.936 15.322l-18.155 28.113c-3.841 5.95-11.966 7.282-17.499 2.921-8.595-6.776-31.814-22.538-61.708-22.538-48.303 0-77.916 35.33-77.916 80.082 0 41.589 26.888 83.692 78.277 83.692 32.657 0 56.843-19.039 65.726-27.225 5.27-4.857 13.596-4.039 17.82 1.738l19.865 27.17a11.947 11.947 0 0 1-1.152 15.518z">
           </path>
-        </svg><!-- <i  class="far fa-copyright"></i> Font Awesome fontawesome.com --> 2022.
-        Designed by New Construction</p>
-      <div  class="mid"><button (click)="onActivate()">GO TO TOP</button></div>
-      <div  class="w-24 justify-between flex flex-wrap">
-        <a  [routerLink]="" routerLinkActive="active" target="_blank" rel="fb">
-          <svg
-             class="svg-inline--fa fa-facebook-f fa-w-10" aria-hidden="true" focusable="false"
-            data-prefix="fab" data-icon="facebook-f" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"
-            data-fa-i2svg="">
+        </svg><!-- <i  class="far fa-copyright"></i> Font Awesome fontawesome.com -->
+        2022. Designed by New Construction
+      </p>
+      <div class="mid"><button (click)="onActivate()">GO TO TOP</button></div>
+      <div class="w-24 justify-between flex flex-wrap">
+        <a [routerLink]="" routerLinkActive="active" target="_blank" rel="fb">
+          <svg class="svg-inline--fa fa-facebook-f fa-w-10" aria-hidden="true" focusable="false" data-prefix="fab"
+            data-icon="facebook-f" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" data-fa-i2svg="">
             <path fill="currentColor"
               d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z">
             </path>
           </svg><!-- <i  class="fab fa-facebook-f"></i> Font Awesome fontawesome.com -->
         </a>
         <a [routerLink]="" routerLinkActive="active" target="_blank" rel="twitter">
-          <svg
-            class="svg-inline--fa fa-twitter fa-w-16" aria-hidden="true" focusable="false" data-prefix="fab"
+          <svg class="svg-inline--fa fa-twitter fa-w-16" aria-hidden="true" focusable="false" data-prefix="fab"
             data-icon="twitter" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg="">
             <path fill="currentColor"
               d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z">
             </path>
           </svg><!-- <i  class="fab fa-twitter"></i> Font Awesome fontawesome.com --></a>
-        <a
-           [routerLink]="" routerLinkActive="active" target="_blank" rel="pinterest">
-           <svg
-            class="svg-inline--fa fa-pinterest-square fa-w-14" aria-hidden="true" focusable="false" data-prefix="fab"
+        <a [routerLink]="" routerLinkActive="active" target="_blank" rel="pinterest">
+          <svg class="svg-inline--fa fa-pinterest-square fa-w-14" aria-hidden="true" focusable="false" data-prefix="fab"
             data-icon="pinterest-square" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
             data-fa-i2svg="">
             <path fill="currentColor"
@@ -64,10 +73,8 @@
           </svg>
           <!-- <i  class="fab fa-pinterest-square"></i> Font Awesome fontawesome.com -->
         </a>
-        <a
-           [routerLink]="" routerLinkActive="active" target="_blank" rel="instagram">
-           <svg
-            class="svg-inline--fa fa-instagram fa-w-14" aria-hidden="true" focusable="false" data-prefix="fab"
+        <a [routerLink]="" routerLinkActive="active" target="_blank" rel="instagram">
+          <svg class="svg-inline--fa fa-instagram fa-w-14" aria-hidden="true" focusable="false" data-prefix="fab"
             data-icon="instagram" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" data-fa-i2svg="">
             <path fill="currentColor"
               d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z">
