--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,33 +1,54 @@
 <app-layout>
   <div class="homebg items-center">
-    <p class="text-2xl absolute text-end right-0 pr-10 pl-32 font-bold  bg-slate-200 top-32">NEW CONSTRUCTION</p>
+    <p
+      class="text-2xl absolute text-end right-0 pr-10 pl-32 font-bold bg-slate-200 top-32"
+    >
+      NEW CONSTRUCTION
+    </p>
   </div>
   <div class="w-full flex absolute bottom-4">
-    <img src="../../../assets/images/logo.png" class="object-scale-down h-24 w-auto absolute right-2" alt="NEW CONSTRUCTION">
-    <p class="text-white">
-      <span class="text-xl pl-2">NEW CONSTRUCTION Company</span> <br>
-      162 Ngo Tat To Street,Ward 22, Binh Thanh District,HCMC <br>
-      Hotline. (028)66577768.Phone. 0898857089 <br>
+    <img
+      src="../../../assets/images/logo.png"
+      class="object-scale-down h-24 w-auto absolute right-2"
+      alt="NEW CONSTRUCTION"
+    />
+    <p class="text-white leading-8">
+      <span class="text-xl pl-2">NEW CONSTRUCTION Company</span> <br />
+      162 Ngo Tat To Street,Ward 22, Binh Thanh District,HCMC <br />
+      Hotline. (028)66577768.Phone. 0898857089 <br />
       Website. newconstruction.vn
     </p>
   </div>
   <div class="flex flex-wrap md:flex-nowrap w-full h-full relative">
-    <div class="w-full h-screen md:w-1/2 content1" style=" background-image: url('../../../assets/images/banner2.jpg')">
-    </div>
+    <div
+      class="w-full h-screen md:w-1/2 content1"
+      style="background-image: url('../../../assets/images/banner2.jpg')"
+    ></div>
     <div class="w-full px-3 md:w-1/2 h-max md:mt-0 mb-2 md:h-auto relative">
-      <div class="md:absolute bg-stone-300 z-0 md:w-3/5 md:m-[20%] px-4 py-2" style="border-radius:10px;">
-        <div class="bg-black  xl:absolute z-30  xl:my-4 xl:ml-6 py-3 w-full xl:w-[120%] pl-4 text-white" style="border-radius:5px;">"TIN TƯỞNG HÌNH THÀNH BẮT ĐẦU"</div>
-        <p class="md:pt-20 md:px-2">
-          Khát vọng của chúng tôi không chỉ mang đến những công trình xây dựng đơn thuần mà trở thành người bạn đồng hành lâu dài cùng Costomers.
+      <div
+        class="md:absolute bg-stone-300 z-0 md:w-3/5 md:m-[20%] px-4 py-2"
+        style="border-radius: 10px"
+      >
+        <div
+          class="bg-black xl:absolute z-30 xl:my-4 xl:ml-6 py-3 w-full xl:w-[120%] pl-4 text-white"
+          style="border-radius: 5px"
+        >
+          "TIN TƯỞNG HÌNH THÀNH BẮT ĐẦU"
+        </div>
+        <p class="md:pt-20 md:px-2 leading-8">
+          Khát vọng của chúng tôi không chỉ mang đến những công trình xây dựng
+          đơn thuần mà trở thành người bạn đồng hành lâu dài cùng Costomers.
         </p>
-        <p class="md:pt-10 px-2">
-          Từ nguồn nhân lực husman là những nhân viên trẻ và không ngừng sáng tạo, chúng tôi sẵn sàng tiến xa,
-          vượt qua thách thức để phát triển mạnh mẽ hơn trong thời gian tới, luôn giữ uy tín và khẳng định thương hiệu của
+        <p class="pt-3 px-2 leading-8">
+          Từ nguồn nhân lực husman là những nhân viên trẻ và không ngừng sáng
+          tạo, chúng tôi sẵn sàng tiến xa, vượt qua thách thức để phát triển
+          mạnh mẽ hơn trong thời gian tới, luôn giữ uy tín và khẳng định thương
+          hiệu của
           <span class="font-bold">LÒNG TIN</span>.
         </p>
         <div class="w-full static">
-          <p class="text-right pr-8 pb-3">
-            <span class="font-bold pr-4">Dinh Duy Hoa</span><br>
+          <p class="text-right pr-8 pb-3 leading-8">
+            <span class="font-bold pr-4">Dinh Duy Hoa</span><br />
             Người sáng lập & Giám đốc
           </p>
         </div>
@@ -39,26 +60,48 @@
   </div>
   <div class="static"></div>
   <div class="flex flex-wrap md:flex-nowrap w-full h-full relative">
-    <div class="w-full h-screen md:w-1/2 content1" style=" background-image: url('../../../assets/images/banner3.jpg')">
-      <div class="w-28 h-full relative" style="background-color: rgba(0, 0, 30, 0.5);margin-left: -16px ;">
-        <p class="absolute bottom-10 text-white mb-6" style="transform: rotate(270deg)">COMMIT</p>
-        </div>
+    <div
+      class="w-full h-screen md:w-1/2 content1"
+      style="background-image: url('../../../assets/images/banner3.jpg')"
+    >
+      <div
+        class="w-28 h-full relative"
+        style="background-color: rgba(0, 0, 30, 0.5); margin-left: -16px"
+      >
+        <p
+          class="absolute bottom-10 text-white mb-6"
+          style="transform: rotate(270deg)"
+        >
+          COMMIT
+        </p>
+      </div>
     </div>
     <div class="w-full px-3 md:w-1/2 h-max md:mt-0 mb-2 md:h-auto relative">
-      <div class="md:absolute bg-stone-300 z-0 md:w-3/5 md:m-[20%] px-4 py-2" style="border-radius:10px;">
-        <div class="pl-4 bg-yellow-400 text-white xl:absolute z-30  xl:my-4 xl:ml-6 py-3 w-full xl:w-[120%]" style="border-radius:5px;">"THỰC HIỆN"</div>
-        <p class="md:pt-20 px-2">
+      <div
+        class="md:absolute bg-stone-300 z-0 md:w-3/5 md:m-[20%] px-4 py-2"
+        style="border-radius: 10px"
+      >
+        <div
+          class="pl-4 bg-yellow-400 text-white xl:absolute z-30 xl:my-4 xl:ml-6 py-3 w-full xl:w-[120%]"
+          style="border-radius: 5px"
+        >
+          "THỰC HIỆN"
+        </div>
+        <p class="md:pt-20 px-2 leading-8">
           01. Không ngừng đổi mới tư duy, cải tiến hệ thống quản lý chất lượng.
         </p>
-        <p class="md:pt-10 px-2">
-          02. Tận tâm hoàn thành công trình chất lượng, đảm bảo đúng tiến độ bàn giao và bảo trì chu đáo.
+        <p class="pt-3 px-2 leading-8">
+          02. Tận tâm hoàn thành công trình chất lượng, đảm bảo đúng tiến độ bàn
+          giao và bảo trì chu đáo.
         </p>
-        <p class="md:pt-10 px-2">
-          03.Tập trung đào tạo, bồi dưỡng nâng cao trình độ cho cán bộ, xây dựng tập thể đoàn kết vững mạnh.
+        <p class="pt-3 px-2 leading-8">
+          03.Tập trung đào tạo, bồi dưỡng nâng cao trình độ cho cán bộ, xây dựng
+          tập thể đoàn kết vững mạnh.
         </p>
-        <p class="md:pt-10 px-2 pb-3">
-          04. Tăng cường đầu tư trang thiết bị, nâng cao chất lượng công trình, tối ưu hóa thời gian xuất xưởng.
-         </p>
+        <p class="pt-3 px-2 pb-3 leading-8">
+          04. Tăng cường đầu tư trang thiết bị, nâng cao chất lượng công trình,
+          tối ưu hóa thời gian xuất xưởng.
+        </p>
       </div>
       <div class="md:p-[15%] hidden md:block">
         <div class="w-28 h-28 bg-stone-200"></div>
