--- a/src/app/pages/slider/slider.component.html
+++ b/src/app/pages/slider/slider.component.html
@@ -1,30 +1,76 @@
-<div class=" mx-5 md:mx-8 xl:mx-12 rounded-lg text-center text-white my-3" style="background-color: rgba(0,0,0,0.5);">
+<div
+  class="mx-5 md:mx-8 xl:mx-12 rounded-lg text-center text-white my-3"
+  style="background-color: rgba(0, 0, 0, 0.5)"
+>
   <h2 class="text-2xl pt-5 font-bold">BAN ĐIỀU HÀNH</h2>
-  <p class="py-5 font-semibold">Doanh nghiệp muốn phát triển bền vững thì phải nhờ vào sợi dây liên kết giữa từng cá nhân với tầm nhìn và mục tiêu chiến lược của Công Ty.</p>
+  <p class="py-5 font-semibold">
+    Doanh nghiệp muốn phát triển bền vững thì phải nhờ vào sợi dây liên kết giữa
+    từng cá nhân với tầm nhìn và mục tiêu chiến lược của Công Ty.
+  </p>
 </div>
 <div class="w-full px-5 md:px-10 xl:px-16 font-sans my-3">
-<owl-carousel-o [options]="customOptions">
-  <ng-container *ngFor="let slider of image">
-    <ng-template carouselSlide>
-      <div class="w-full bg-orange-50 justify-center p-8" style="border-radius:5px">
-        <h2 class="text-2xl font-medium text-center h-20 items-center">{{slider[0]}}</h2>
-        <img src="{{slider[1]}}" class="object-cover w-auto h-[350px]" style="border-radius:10px" alt="{{slider[0]}}">
-        <h3 class="text-xl font-medium text-center h-20 pt-6">{{slider[2]}}</h3>
-        <div class="h-40">
-          <div class="text-center">
-            <svg _ngcontent-xfj-c17="" class="svg-inline--fa fa-gem fa-w-18 text-md text-center pt-auto" aria-hidden="true" focusable="false" data-prefix="far" data-icon="gem" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" data-fa-i2svg="">
-              <path fill="currentColor" d="M464 32H336c-26.5 0-48 21.5-48 48v128c0 26.5 21.5 48 48 48h80v64c0 35.3-28.7 64-64 64h-8c-13.3 0-24 10.7-24 24v48c0 13.3 10.7 24 24 24h8c88.4 0 160-71.6 160-160V80c0-26.5-21.5-48-48-48zm-288 0H48C21.5 32 0 53.5 0 80v128c0 26.5 21.5 48 48 48h80v64c0 35.3-28.7 64-64 64h-8c-13.3 0-24 10.7-24 24v48c0 13.3 10.7 24 24 24h8c88.4 0 160-71.6 160-160V80c0-26.5-21.5-48-48-48z"></path>
-            </svg>
-          </div>
-          <p class="text-center py-3">{{slider[3]}}</p>
-          <div class="text-center">
-            <svg _ngcontent-xfj-c17="" class="svg-inline--fa fa-gem fa-w-18 text-md text-center pt-auto" aria-hidden="true" focusable="false" data-prefix="far" data-icon="gem" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" data-fa-i2svg="">
-              <path fill="currentColor" d="M464 32H336c-26.5 0-48 21.5-48 48v128c0 26.5 21.5 48 48 48h80v64c0 35.3-28.7 64-64 64h-8c-13.3 0-24 10.7-24 24v48c0 13.3 10.7 24 24 24h8c88.4 0 160-71.6 160-160V80c0-26.5-21.5-48-48-48zm-288 0H48C21.5 32 0 53.5 0 80v128c0 26.5 21.5 48 48 48h80v64c0 35.3-28.7 64-64 64h-8c-13.3 0-24 10.7-24 24v48c0 13.3 10.7 24 24 24h8c88.4 0 160-71.6 160-160V80c0-26.5-21.5-48-48-48z"></path>
-            </svg>
+  <owl-carousel-o [options]="customOptions">
+    <ng-container *ngFor="let slider of image">
+      <ng-template carouselSlide>
+        <div
+          class="w-full bg-orange-50 justify-center p-8"
+          style="border-radius: 5px"
+        >
+          <h2 class="text-2xl font-medium text-center h-20 items-center">
+            {{ slider[0] }}
+          </h2>
+          <img
+            src="{{ slider[1] }}"
+            class="object-cover w-auto h-[350px]"
+            style="border-radius: 10px"
+            alt="{{ slider[0] }}"
+          />
+          <h3 class="text-xl font-medium text-center h-20 pt-6">
+            {{ slider[2] }}
+          </h3>
+          <div class="h-40">
+            <div class="text-center">
+              <svg
+                _ngcontent-xfj-c17=""
+                class="svg-inline--fa fa-gem fa-w-18 text-md text-center pt-auto"
+                aria-hidden="true"
+                focusable="false"
+                data-prefix="far"
+                data-icon="gem"
+                role="img"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 576 512"
+                data-fa-i2svg=""
+              >
+                <path
+                  fill="currentColor"
+                  d="M464 32H336c-26.5 0-48 21.5-48 48v128c0 26.5 21.5 48 48 48h80v64c0 35.3-28.7 64-64 64h-8c-13.3 0-24 10.7-24 24v48c0 13.3 10.7 24 24 24h8c88.4 0 160-71.6 160-160V80c0-26.5-21.5-48-48-48zm-288 0H48C21.5 32 0 53.5 0 80v128c0 26.5 21.5 48 48 48h80v64c0 35.3-28.7 64-64 64h-8c-13.3 0-24 10.7-24 24v48c0 13.3 10.7 24 24 24h8c88.4 0 160-71.6 160-160V80c0-26.5-21.5-48-48-48z"
+                ></path>
+              </svg>
+            </div>
+            <p class="text-center py-3">{{ slider[3] }}</p>
+            <div class="text-center">
+              <svg
+                _ngcontent-xfj-c17=""
+                class="svg-inline--fa fa-gem fa-w-18 text-md text-center pt-auto"
+                aria-hidden="true"
+                focusable="false"
+                data-prefix="far"
+                data-icon="gem"
+                role="img"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 576 512"
+                data-fa-i2svg=""
+              >
+                <path
+                  fill="currentColor"
+                  d="M464 32H336c-26.5 0-48 21.5-48 48v128c0 26.5 21.5 48 48 48h80v64c0 35.3-28.7 64-64 64h-8c-13.3 0-24 10.7-24 24v48c0 13.3 10.7 24 24 24h8c88.4 0 160-71.6 160-160V80c0-26.5-21.5-48-48-48zm-288 0H48C21.5 32 0 53.5 0 80v128c0 26.5 21.5 48 48 48h80v64c0 35.3-28.7 64-64 64h-8c-13.3 0-24 10.7-24 24v48c0 13.3 10.7 24 24 24h8c88.4 0 160-71.6 160-160V80c0-26.5-21.5-48-48-48z"
+                ></path>
+              </svg>
+            </div>
           </div>
         </div>
-      </div>
-    </ng-template>
-  </ng-container>
-</owl-carousel-o>
+      </ng-template>
+    </ng-container>
+  </owl-carousel-o>
 </div>
