--- a/src/app/pages/thietke/thietke.component.html
+++ b/src/app/pages/thietke/thietke.component.html
@@ -1,44 +1,82 @@
 <div class="w-full m-0 items-center flex flex-wrap">
-  <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8 w-full md:w-1/2 bg-white p-4">
-    <div class="justify-start items-center mb-4 last:mr-auto w-full h-full cursor-pointer" *ngFor="let img of listItem">
+  <div
+    class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8 w-full md:w-1/2 bg-white p-4"
+  >
+    <div
+      class="justify-start items-center last:mr-auto w-full h-full cursor-pointer"
+      *ngFor="let img of listItem"
+    >
       <div class="w-full aspect-[4/3]">
-        <img src="{{img[0]}}" alt="{{img[1]}}" class="w-full rounded-xl">
+        <img src="{{ img[0] }}" alt="{{ img[1] }}" class="w-full rounded-xl" />
       </div>
-      <b class="text-lg mt-2">{{img[1]}}</b>
+      <b class="text-lg mt-2">{{ img[1] }}</b>
     </div>
   </div>
-  <div class="w-full md:w-1/2  justify-center md:items-center">
-    <div class="text-3xl pb-10 p-5 md:p-16 font-bold">THIẾT KẾ, THI CÔNG VÀ SETUP HỆ THỐNG SHOWROOM VĂN PHÒNG, CỬA HÀNG F&B</div>
-    <p class="px-3 md:px-16 pb-6 md:pb-10 xl:pb-16">Bằng sức mạnh của một tập thể đoàn kết, sự năng động của mỗi cá nhân và kinh nghiệm thực
-      tiễn khi đã từng tham gia xây dựng cơ sở hạ tầng của các nhãn hàng lớn như: Thế Giới Di Động, Điện Máy Xanh,
-      Bách Hóa Xanh, Texas Chicken, King Coffee, The Coffee Housse, Terra Coffee, Sasin, The Pizza Company,…</p>
-    <p class="px-3 md:px-16">
-      Với lợi thế tốc độ thi công nhanh, khả năng thi công rộng, New Construction tự tin đồng hành cùng các khách hàng
-      trên nhiều địa bàn trong lĩnh vực thiết kế, thi công các hệ thống chuỗi.
+  <div class="w-full md:w-1/2 justify-center md:items-center">
+    <div class="text-3xl p-5 md:p-10 font-bold">
+      THIẾT KẾ, THI CÔNG VÀ SETUP HỆ THỐNG SHOWROOM VĂN PHÒNG, CỬA HÀNG F&B
+    </div>
+    <p class="px-3 md:px-16 pb-3 xl:pb-5 leading-8 font-sans">
+      Bằng sức mạnh của một tập thể đoàn kết, sự năng động của mỗi cá nhân và
+      kinh nghiệm thực tiễn khi đã từng tham gia xây dựng cơ sở hạ tầng của các
+      nhãn hàng lớn như: Thế Giới Di Động, Điện Máy Xanh, Bách Hóa Xanh, Texas
+      Chicken, King Coffee, The Coffee Housse, Terra Coffee, Sasin, The Pizza
+      Company,…
+    </p>
+    <p class="px-3 md:px-16 pb-3 xl:pb-5 leading-8 font-sans">
+      Với lợi thế tốc độ thi công nhanh, khả năng thi công rộng, New
+      Construction tự tin đồng hành cùng các khách hàng trên nhiều địa bàn trong
+      lĩnh vực thiết kế, thi công các hệ thống chuỗi.
     </p>
   </div>
 </div>
 <div class="flex flex-wrap w-full h-full relative">
   <div class="w-full md:h-screen md:w-2/5 pr-2">
-    <img src="../../../assets/images/banner4.jpg" class="object-cover w-full h-full" alt="hinh anh">
+    <img
+      src="../../../assets/images/banner4.jpg"
+      class="object-cover w-full h-full"
+      alt="hinh anh"
+    />
   </div>
   <div class="w-full md:h-screen md:w-3/5">
-    <div class="w-full h-max md:h-[39vh] flex flex-wrap md:flex-nowrap relative">
+    <div
+      class="w-full h-max md:h-[39vh] flex flex-wrap md:flex-nowrap relative"
+    >
       <div class="w-full md:w-[39%] md:pr-[1%]">
-        <img src="../../../assets/images/banner5.jpg" class="object-cover w-full md:h-full h-48" alt="hinh anh">
+        <img
+          src="../../../assets/images/banner5.jpg"
+          class="object-cover w-full md:h-full h-48"
+          alt="hinh anh"
+        />
       </div>
       <div class="w-full md:w-[60%]">
-        <img src="../../../assets/images/banner6.jpg" class="object-cover w-full md:h-full h-48 " alt="hinh anh">
+        <img
+          src="../../../assets/images/banner6.jpg"
+          class="object-cover w-full md:h-full h-48"
+          alt="hinh anh"
+        />
       </div>
     </div>
-    <div class="w-full mt-[1vh] h-max md:h-[60vh] flex flex-wrap md:flex-nowrap font-sans relative">
+    <div
+      class="w-full mt-[1vh] h-max md:h-[60vh] flex flex-wrap md:flex-nowrap font-sans relative"
+    >
       <div class="w-full md:w-[39%] md:pr-[1%]">
-        <img src="../../../assets/images/banner5.jpg" class="object-cover w-full md:h-full h-48" alt="hinh anh">
+        <img
+          src="../../../assets/images/banner5.jpg"
+          class="object-cover w-full md:h-full h-48"
+          alt="hinh anh"
+        />
       </div>
       <div class="w-full md:w-[60%] items-center h-max md:my-auto px-4">
         <div class="h-auto justify-center">
-          <h2 class="text-2xl font-bold mb-8">THIẾT KẾ, THI CÔNG CÁC CÔNG TRÌNH DÂN DỤNG</h2>
-          <p style="text-align:justify">Mang lại trải nghiệm cuộc sống tốt nhất cho khách hàng là tiêu chí hàng đầu để đội ngũ New Construction thực hiện các thiết kế đảm bảo về công năng, tính thẩm mỹ và sự cá nhân hóa trong không gian sống.</p>
+          <h2 class="text-2xl font-bold mb-8">
+            THIẾT KẾ, THI CÔNG CÁC CÔNG TRÌNH DÂN DỤNG
+          </h2>
+          <p style="text-align: justify" class="leading-8">
+            Mang lại trải nghiệm cuộc sống tốt nhất cho khách hàng là tiêu chí
+            hàng đầu để đội ngũ New Construction thực hiện các thiết kế đảm bảo
+            về công năng, tính thẩm mỹ và sự cá nhân hóa trong không gian sống.
+          </p>
         </div>
       </div>
     </div>
@@ -46,50 +84,130 @@
 </div>
 <div class="bg-black h-max w-full text-white text-justify px-8">
   <div class="py-10 px-5 md:p-10">
-    <h2 class="text-2xl xl:text-3xl  font-semibold mb-3 md:mb-8" style="font-family: arial;">HOẠT ĐỘNG CHÍNH</h2>
-    <p style="text-align:justify font-mono">
-      Chúng tôi cung cấp một cách đầy đủ và trọn vẹn nhất tất cả những dịch vụ liên quan. Từng hoạt động đều có sự gắn kết hỗ trợ nhau mới có thể tạo ra sản phẩm dịch vụ tốt nhất khi trao tay Khách Hàng.
+    <h2
+      class="text-2xl xl:text-3xl font-semibold mb-3 md:mb-8"
+      style="font-family: arial"
+    >
+      HOẠT ĐỘNG CHÍNH
+    </h2>
+    <p style="text-align: justify" class="font-mono leading-7">
+      Chúng tôi cung cấp một cách đầy đủ và trọn vẹn nhất tất cả những dịch vụ
+      liên quan. Từng hoạt động đều có sự gắn kết hỗ trợ nhau mới có thể tạo ra
+      sản phẩm dịch vụ tốt nhất khi trao tay Khách Hàng.
     </p>
   </div>
   <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-8 w-full p-4">
-    <div class="h-auto items-center" style="border:1px solid gray">
-     <div class="text-center justify-center p-8">
-      <svg _ngcontent-xfj-c17="" class="svg-inline--fa fa-gem fa-w-18 text-5xl text-center pt-auto" aria-hidden="true" focusable="false" data-prefix="far" data-icon="gem" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" data-fa-i2svg="">
-        <path fill="currentColor" d="M464 0H112c-4 0-7.8 2-10 5.4L2 152.6c-2.9 4.4-2.6 10.2.7 14.2l276 340.8c4.8 5.9 13.8 5.9 18.6 0l276-340.8c3.3-4.1 3.6-9.8.7-14.2L474.1 5.4C471.8 2 468.1 0 464 0zm-19.3 48l63.3 96h-68.4l-51.7-96h56.8zm-202.1 0h90.7l51.7 96H191l51.6-96zm-111.3 0h56.8l-51.7 96H68l63.3-96zm-43 144h51.4L208 352 88.3 192zm102.9 0h193.6L288 435.3 191.2 192zM368 352l68.2-160h51.4L368 352z">
-      </path></svg>
-      <h2 class="text-center font-semibold text-xl py-5">TƯ VẤN - THIẾT KẾ</h2>
-      <p class="text-justify">Là giai đoạn đầu tiên và quan trọng nhất giúp cho KH định hình về phong cách, công năng và chi phí,... Những sản phẩm Thiết kế của Công ty luôn được đánh giá cao về sự sáng tạo và ấn tượng.</p>
-     </div>
+    <div class="h-auto items-center" style="border: 1px solid gray">
+      <div class="text-center justify-center p-8">
+        <svg
+          _ngcontent-xfj-c17=""
+          class="svg-inline--fa fa-gem fa-w-18 text-5xl text-center pt-auto"
+          aria-hidden="true"
+          focusable="false"
+          data-prefix="far"
+          data-icon="gem"
+          role="img"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 576 512"
+          data-fa-i2svg=""
+        >
+          <path
+            fill="currentColor"
+            d="M464 0H112c-4 0-7.8 2-10 5.4L2 152.6c-2.9 4.4-2.6 10.2.7 14.2l276 340.8c4.8 5.9 13.8 5.9 18.6 0l276-340.8c3.3-4.1 3.6-9.8.7-14.2L474.1 5.4C471.8 2 468.1 0 464 0zm-19.3 48l63.3 96h-68.4l-51.7-96h56.8zm-202.1 0h90.7l51.7 96H191l51.6-96zm-111.3 0h56.8l-51.7 96H68l63.3-96zm-43 144h51.4L208 352 88.3 192zm102.9 0h193.6L288 435.3 191.2 192zM368 352l68.2-160h51.4L368 352z"
+          ></path>
+        </svg>
+        <h2 class="text-center font-semibold text-xl py-5">
+          TƯ VẤN - THIẾT KẾ
+        </h2>
+        <p class="text-justify leading-7">
+          Là giai đoạn đầu tiên và quan trọng nhất giúp cho KH định hình về
+          phong cách, công năng và chi phí,... Những sản phẩm Thiết kế của Công
+          ty luôn được đánh giá cao về sự sáng tạo và ấn tượng.
+        </p>
+      </div>
     </div>
-    <div class="h-auto items-center" style="border:1px solid gray">
+    <div class="h-auto items-center" style="border: 1px solid gray">
       <div class="text-center justify-center p-8">
-       <svg _ngcontent-xfj-c17="" class="svg-inline--fa fa-gem fa-w-18 text-5xl text-center pt-auto" aria-hidden="true" focusable="false" data-prefix="far" data-icon="gem" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" data-fa-i2svg="">
-        <path fill="currentColor" d="M512 320s-64 92.65-64 128c0 35.35 28.66 64 64 64s64-28.65 64-64-64-128-64-128zm-9.37-102.94L294.94 9.37C288.69 3.12 280.5 0 272.31 0s-16.38 3.12-22.62 9.37l-81.58 81.58L81.93 4.76c-6.25-6.25-16.38-6.25-22.62 0L36.69 27.38c-6.24 6.25-6.24 16.38 0 22.62l86.19 86.18-94.76 94.76c-37.49 37.48-37.49 98.26 0 135.75l117.19 117.19c18.74 18.74 43.31 28.12 67.87 28.12 24.57 0 49.13-9.37 67.87-28.12l221.57-221.57c12.5-12.5 12.5-32.75.01-45.25zm-116.22 70.97H65.93c1.36-3.84 3.57-7.98 7.43-11.83l13.15-13.15 81.61-81.61 58.6 58.6c12.49 12.49 32.75 12.49 45.24 0s12.49-32.75 0-45.24l-58.6-58.6 58.95-58.95 162.44 162.44-48.34 48.34z"></path>
-      </svg>
-       <h2 class="text-center font-semibold text-xl py-5">THI CÔNG XÂY LẮP</h2>
-       <p class="text-justify">Thực hiện thi công theo bản vẽ thiết kế, cam kết đảm bảo tiến độ và chất lượng.</p>
+        <svg
+          _ngcontent-xfj-c17=""
+          class="svg-inline--fa fa-gem fa-w-18 text-5xl text-center pt-auto"
+          aria-hidden="true"
+          focusable="false"
+          data-prefix="far"
+          data-icon="gem"
+          role="img"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 576 512"
+          data-fa-i2svg=""
+        >
+          <path
+            fill="currentColor"
+            d="M512 320s-64 92.65-64 128c0 35.35 28.66 64 64 64s64-28.65 64-64-64-128-64-128zm-9.37-102.94L294.94 9.37C288.69 3.12 280.5 0 272.31 0s-16.38 3.12-22.62 9.37l-81.58 81.58L81.93 4.76c-6.25-6.25-16.38-6.25-22.62 0L36.69 27.38c-6.24 6.25-6.24 16.38 0 22.62l86.19 86.18-94.76 94.76c-37.49 37.48-37.49 98.26 0 135.75l117.19 117.19c18.74 18.74 43.31 28.12 67.87 28.12 24.57 0 49.13-9.37 67.87-28.12l221.57-221.57c12.5-12.5 12.5-32.75.01-45.25zm-116.22 70.97H65.93c1.36-3.84 3.57-7.98 7.43-11.83l13.15-13.15 81.61-81.61 58.6 58.6c12.49 12.49 32.75 12.49 45.24 0s12.49-32.75 0-45.24l-58.6-58.6 58.95-58.95 162.44 162.44-48.34 48.34z"
+          ></path>
+        </svg>
+        <h2 class="text-center font-semibold text-xl py-5 leading-7">
+          THI CÔNG XÂY LẮP
+        </h2>
+        <p class="text-justify">
+          Thực hiện thi công theo bản vẽ thiết kế, cam kết đảm bảo tiến độ và
+          chất lượng.
+        </p>
       </div>
-     </div>
-     <div class="h-auto items-center" style="border:1px solid gray">
+    </div>
+    <div class="h-auto items-center" style="border: 1px solid gray">
       <div class="text-center justify-center p-8">
-       <svg _ngcontent-xfj-c17="" class="svg-inline--fa fa-gem fa-w-18 text-5xl text-center pt-auto" aria-hidden="true" focusable="false" data-prefix="far" data-icon="gem" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" data-fa-i2svg="">
-        <path fill="currentColor" d="M12.971 352h32.394C67.172 454.735 181.944 512 288 512c106.229 0 220.853-57.38 242.635-160h32.394c10.691 0 16.045-12.926 8.485-20.485l-67.029-67.029c-4.686-4.686-12.284-4.686-16.971 0l-67.029 67.029c-7.56 7.56-2.206 20.485 8.485 20.485h35.146c-20.29 54.317-84.963 86.588-144.117 94.015V256h52c6.627 0 12-5.373 12-12v-40c0-6.627-5.373-12-12-12h-52v-5.47c37.281-13.178 63.995-48.725 64-90.518C384.005 43.772 341.605.738 289.37.01 235.723-.739 192 42.525 192 96c0 41.798 26.716 77.35 64 90.53V192h-52c-6.627 0-12 5.373-12 12v40c0 6.627 5.373 12 12 12h52v190.015c-58.936-7.399-123.82-39.679-144.117-94.015h35.146c10.691 0 16.045-12.926 8.485-20.485l-67.029-67.029c-4.686-4.686-12.284-4.686-16.971 0L4.485 331.515C-3.074 339.074 2.28 352 12.971 352zM288 64c17.645 0 32 14.355 32 32s-14.355 32-32 32-32-14.355-32-32 14.355-32 32-32z"></path>
-      </svg>
-       <h2 class="text-center font-semibold text-xl py-5">TRANG TRÍ NỘI THẤT</h2>
-       <p class="text-justify">Tiến hành bố trí thẩm mỹ nội thất bên trong dựa theo bản vẽ, đảm bảo sự hài hòa, tiện ích và mang tính nghệ thuật cao.</p>
+        <svg
+          _ngcontent-xfj-c17=""
+          class="svg-inline--fa fa-gem fa-w-18 text-5xl text-center pt-auto"
+          aria-hidden="true"
+          focusable="false"
+          data-prefix="far"
+          data-icon="gem"
+          role="img"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 576 512"
+          data-fa-i2svg=""
+        >
+          <path
+            fill="currentColor"
+            d="M12.971 352h32.394C67.172 454.735 181.944 512 288 512c106.229 0 220.853-57.38 242.635-160h32.394c10.691 0 16.045-12.926 8.485-20.485l-67.029-67.029c-4.686-4.686-12.284-4.686-16.971 0l-67.029 67.029c-7.56 7.56-2.206 20.485 8.485 20.485h35.146c-20.29 54.317-84.963 86.588-144.117 94.015V256h52c6.627 0 12-5.373 12-12v-40c0-6.627-5.373-12-12-12h-52v-5.47c37.281-13.178 63.995-48.725 64-90.518C384.005 43.772 341.605.738 289.37.01 235.723-.739 192 42.525 192 96c0 41.798 26.716 77.35 64 90.53V192h-52c-6.627 0-12 5.373-12 12v40c0 6.627 5.373 12 12 12h52v190.015c-58.936-7.399-123.82-39.679-144.117-94.015h35.146c10.691 0 16.045-12.926 8.485-20.485l-67.029-67.029c-4.686-4.686-12.284-4.686-16.971 0L4.485 331.515C-3.074 339.074 2.28 352 12.971 352zM288 64c17.645 0 32 14.355 32 32s-14.355 32-32 32-32-14.355-32-32 14.355-32 32-32z"
+          ></path>
+        </svg>
+        <h2 class="text-center font-semibold text-xl py-5">
+          TRANG TRÍ NỘI THẤT
+        </h2>
+        <p class="text-justify leading-7">
+          Tiến hành bố trí thẩm mỹ nội thất bên trong dựa theo bản vẽ, đảm bảo
+          sự hài hòa, tiện ích và mang tính nghệ thuật cao.
+        </p>
       </div>
-     </div>
-     <div class="h-auto items-center" style="border:1px solid gray">
+    </div>
+    <div class="h-auto items-center" style="border: 1px solid gray">
       <div class="text-center justify-center p-8">
-       <svg _ngcontent-xfj-c17="" class="svg-inline--fa fa-gem fa-w-18 text-5xl text-center pt-auto" aria-hidden="true" focusable="false" data-prefix="far" data-icon="gem" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" data-fa-i2svg="">
-        <path fill="currentColor" d="M192 208c0-17.67-14.33-32-32-32h-16c-35.35 0-64 28.65-64 64v48c0 35.35 28.65 64 64 64h16c17.67 0 32-14.33 32-32V208zm176 144c35.35 0 64-28.65 64-64v-48c0-35.35-28.65-64-64-64h-16c-17.67 0-32 14.33-32 32v112c0 17.67 14.33 32 32 32h16zM256 0C113.18 0 4.58 118.83 0 256v16c0 8.84 7.16 16 16 16h16c8.84 0 16-7.16 16-16v-16c0-114.69 93.31-208 208-208s208 93.31 208 208h-.12c.08 2.43.12 165.72.12 165.72 0 23.35-18.93 42.28-42.28 42.28H320c0-26.51-21.49-48-48-48h-32c-26.51 0-48 21.49-48 48s21.49 48 48 48h181.72c49.86 0 90.28-40.42 90.28-90.28V256C507.42 118.83 398.82 0 256 0z"></path>
-      </svg>
-       <h2 class="text-center font-semibold text-xl py-5">SETUP VẬN HÀNH</h2>
-       <p class="text-justify">Thực hiện thiết kế ý tưởng và phương án bày trí một cách thẩm mỹ và khoa học các công cụ, phương tiện vận hành cơ sở kinh doanh, đồng thời tư vấn giải pháp vận hành tối ưu.</p>
+        <svg
+          _ngcontent-xfj-c17=""
+          class="svg-inline--fa fa-gem fa-w-18 text-5xl text-center pt-auto"
+          aria-hidden="true"
+          focusable="false"
+          data-prefix="far"
+          data-icon="gem"
+          role="img"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 576 512"
+          data-fa-i2svg=""
+        >
+          <path
+            fill="currentColor"
+            d="M192 208c0-17.67-14.33-32-32-32h-16c-35.35 0-64 28.65-64 64v48c0 35.35 28.65 64 64 64h16c17.67 0 32-14.33 32-32V208zm176 144c35.35 0 64-28.65 64-64v-48c0-35.35-28.65-64-64-64h-16c-17.67 0-32 14.33-32 32v112c0 17.67 14.33 32 32 32h16zM256 0C113.18 0 4.58 118.83 0 256v16c0 8.84 7.16 16 16 16h16c8.84 0 16-7.16 16-16v-16c0-114.69 93.31-208 208-208s208 93.31 208 208h-.12c.08 2.43.12 165.72.12 165.72 0 23.35-18.93 42.28-42.28 42.28H320c0-26.51-21.49-48-48-48h-32c-26.51 0-48 21.49-48 48s21.49 48 48 48h181.72c49.86 0 90.28-40.42 90.28-90.28V256C507.42 118.83 398.82 0 256 0z"
+          ></path>
+        </svg>
+        <h2 class="text-center font-semibold text-xl py-5">SETUP VẬN HÀNH</h2>
+        <p class="text-justify leading-7">
+          Thực hiện thiết kế ý tưởng và phương án bày trí một cách thẩm mỹ và
+          khoa học các công cụ, phương tiện vận hành cơ sở kinh doanh, đồng thời
+          tư vấn giải pháp vận hành tối ưu.
+        </p>
       </div>
-     </div>
-
+    </div>
   </div>
-
 </div>
-
